<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/layout_item_baihatyeuthich"
    android:background="@color/mau_nen_anh_den"
    android:layout_height="wrap_content">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_song"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/imgsong1"
        app:shapeAppearanceOverlay="@style/Botronanh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/name_song_baihatyeuthich"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/bai_hat"
        app:layout_constraintStart_toEndOf="@id/img_song"
        app:layout_constraintEnd_toStartOf="@+id/nut_bam_tim"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:id="@+id/name_tacgia_baihatyeuthich"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/tac_gia"
        app:layout_constraintStart_toStartOf="@id/name_song_baihatyeuthich"
        app:layout_constraintEnd_toEndOf="@id/name_song_baihatyeuthich"
        app:layout_constraintTop_toBottomOf="@id/name_song_baihatyeuthich"
        />
    <ImageButton
        android:layout_height="48dp"
        android:layout_width="48dp"
        android:id="@+id/nut_bam_chitiet"
        android:src="@drawable/ic_three_dots"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/more_options_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <ImageButton
        android:layout_height="48dp"
        android:layout_width="48dp"
        android:id="@+id/nut_bam_tim"
        android:src="@drawable/ic_icon_heart"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/like_button"
        app:layout_constraintEnd_toStartOf="@id/nut_bam_chitiet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>