<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bai_hat_yeu_thich"
    android:background="@color/mau_nen_anh_den">
    <ImageButton
        android:id="@+id/nut_bam_quay_lai"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/customhinhvuong"
        android:src="@drawable/ic_prev_back"
        android:scaleType="centerInside"
        android:contentDescription="@string/text_quay_lai"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tieu_de_bai_hat_yeu_thich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/text_bai_hat_yeu_thich"
        android:textColor="@color/mau_cam_thanh_tab"
        app:layout_constraintTop_toBottomOf="@+id/nut_bam_quay_lai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/lalezar"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nut_bam_phat_ngau_nhien"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/customhcn"
        android:backgroundTint="@null"
        android:theme="@style/ThemeOverlay.AppCompat"
        android:text="@string/text_nut_phat_ngau_nhien"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tieu_de_bai_hat_yeu_thich"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tieuu_de_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_playlist"
        android:textColor="@color/mau_cam_thanh_tab"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nut_bam_phat_ngau_nhien"
        android:layout_marginLeft="20dp"
        />
    <ListView
        android:id="@+id/listview_baihatyeuthich"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/tieuu_de_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >
        <include layout="@layout/activity_menu"  android:id="@+id/id_menu_baihatyeuthich"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>