<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/thanh_doc_txt_playlist"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:scrollbars="vertical"
    android:fillViewport="true"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/khung_playlist_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/song1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/name_song1"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:id="@+id/song2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/name_song2"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:id="@+id/song3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/name_song3"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:id="@+id/song4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/name_song1"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:id="@+id/song5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/name_song2"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:id="@+id/song6"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/name_song3"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>
</ScrollView>